--- a/sass/components/_story.scss
+++ b/sass/components/_story.scss
@@ -15,6 +15,16 @@
     transform: skewX(12deg);
   }
 
+  @include respond(tab-port) {
+    width: 100%;
+    padding: 4rem;
+    padding-left: 7rem;
+  }
+
+  @include respond(phone) {
+    transform: skew(0);
+  }
+
   &__shape {
     width: 15rem;
     height: 15rem;
@@ -27,10 +37,14 @@
     position: relative;
     backface-visibility: hidden;
     -webkit-backspace-visibility: hidden;
+
+    @include respond(phone) {
+      transform: translateX(-3rem) skew(0);
+    }
   }
 
   &__img {
-    height: 100%;
+    height: 90%;
     transform: translateX(-4rem) scale(1.3);
     backface-visibility: hidden;
     transition: all 0.5s;
@@ -38,6 +52,10 @@
 
   &__text {
     transform: skewX(12deg);
+
+    @include respond(phone) {
+      transform: translateX(-3rem) skew(0);
+    }
   }
 
   &__caption {
